@@ -1,3 +1,5 @@
+    - Log if template or layouts were not found and avoid "internal server errors".
+
 0.0.11 2017.08.26
     - Ticket #245 - created doc directory
     - Ticket #185 - let run-psgi-request accept Hash
